--- a/.github/workflows/genera_rss.yml
+++ b/.github/workflows/genera_rss.yml
@@ -1,4 +1,4 @@
-name: Genera RSS
+name: Genera e pubblica RSS
 
 on:
   schedule:
@@ -8,9 +8,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
 
     steps:
-      - name: Checkout repository
+      - name: Checkout del repository
         uses: actions/checkout@v3
 
       - name: Setup Python
@@ -18,19 +22,36 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install dependencies
+      - name: Installa dipendenze
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Esegui FeedRSS.py
+      - name: Genera circolari.xml
         run: |
           python FeedRSS.py
 
-      - name: Commit & push circolari.xml
+      - name: Prepara i file per Pages
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add circolari.xml
-          git commit -m "Aggiorna circolari.xml" || echo "Nessuna modifica"
-          git push
+          mkdir pubblica
+          mv circolari.xml pubblica/
+
+      - name: Carica i file da pubblicare
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: pubblica/
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Distribuisci su GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
